# meerkat-dl

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mdl/: __init__.py  operations.py  tensor.py  utilities.py
src/mdl/autodiff/: dcgraph.py  linear.py  operations.py  sequence.py  utils.py
src/mdl/base/: operations.py
src/mdl/net/: activation.py  convolution.py  layer.py  linear.py  loss.py  optimizers.py  sequence.py
tests/: test_dcg.py  test_mdl.py  test_meerkat_dl.py  test_operations.py  test_tensor.py  test_tensor_operations.py
